Webpack build and server start on npm start

--- a/public/stylesheet.css
+++ b/public/stylesheet.css
@@ -7,3 +7,12 @@ body {
   main {
     flex: 1 0 auto;
   }
+
+#texts {
+  display: inline;
+  white-space: nowrap;
+}
+
+#image {
+  display: inline;
+}
